# OpenSkyCity

./: .gitignore  LICENSE.md  ReadME.md  ReadME.txt  buildozer.spec  dependencies.txt  files.txt  initialize.py  keys.key  main.py  opencity.spec  opencity_linux.spec  paths.txt  pyproject.toml  reusable_code.py  some_city_names.txt
.github/workflows/: main.yml  windows.yml
converter/: converter.py
cryptograph/: file_decryptor.py  file_encryptor.py  key_creator.py  key_reader.py  tester.py
dirs/: __init__.py  dir_checker.py  dir_creator.py  dir_reader.py
file/: file.py  files.py
files/: __init__.py  file_checker.py  file_creator.py  file_reader.py
files_and_folders/: __init__.py  files_and_folder_creator.py  tester.py
initialization/: intialize.py
opencity_kivy/: button_press.aup  exit_game_menu.kv  exit_game_menu.py  hoverbehavior.py  main_menu.kv  main_menu.py  myanimation.py  splashscreen.py
premium/: premium_test.py  premium_users.py  premium_users.usra  tester.py
special_sandbox/: special_sandbox_mode_test.py  special_sandbox_mode_users.py  special_sandbox_mode_users.usra  tesr.py
src/: cryptograph.py  discord_rpc_deco.py  file.py  files.py  initialize.py  main.py  opencity.py  reusable_code.py  settings.py
src/back_webconn_file_creation/: cryptograph.py  db_conn.py  discord_rpc_deco.py  file.py  files.py  reusable_code.py  settings.py
src/back_webconn_file_creation/keys/: keys.py  keys.pyi
src/back_webconn_file_creation/premium/: premium_test.py  premium_users.py
src/back_webconn_file_creation/special_sandbox/: special_sandbox_test.py  special_sandbox_users.py  special_sandbox_users.usra
src/back_webconn_file_creation/users/: users.py  users.pyi
src/cryptograph/: file_decryptor.py  file_encryptor.py
src/front_ui_display/opencity_kivy/: exit_game_menu.kv  (+7 more)
src/opencity_kivy/: exit_game_menu.kv  exit_game_menu.py  hoverbehavior.py  main_menu.kv  main_menu.py  myanimation.py  operatorion.py  splashscreen.py
src/premium/: premium_test.py  premium_users.py
src/special_sandbox/: special_sandbox_mode_test.py  special_sandbox_mode_users.py
tester/: plugins.json  plugins.lby  premium_tester.txt  premium_testers.txt  premium_userrss.txt  tes1.py  tes2.py  tes3.py  tes4.py  tes5.py  test.txt  test6.py  tester.py
tests/: test_reusable_code.py
tests/back_webconn_file_creation/: test_file.py  test_files.py
users/: users.py
(+11 files in other folders)
