[tool.poetry]
name = "opencity"
version = "0.2.0"
description = ""
authors = ["sairam4123 <opencity@info.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kivy = {version = "2.0.0rc3", extras = ["all"]}
cryptography = "^3.0"
Cython = "0.29.15"
"kivy_deps.sdl2" = {platform = "win32", version = "0.1.*"}
"kivy_deps.glew" = {platform = "win32", version = "0.1.*"}
"kivy_deps.gstreamer" = {platform = "win32", version = "0.1.*"}
"kivy_deps.angle" = {platform = "win32", version = "0.1.*"}
pillow = "^7.2.0"
python-ffmpeg = "^1.0.11"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"
buildozer = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
